--- a/Project/PhotographyWebSite/css/full.css
+++ b/Project/PhotographyWebSite/css/full.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
-    border-color: #F05F40;
+    border-color: #eb3812;
     border-width: 3px;
     max-width: 50px;
 }
@@ -151,7 +151,7 @@ header {
     background-size: cover;
     -o-background-size: cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    background-image: url('../img/DSC_0727.JPG');
     text-align: center;
     color: white;
 }
@@ -329,12 +329,12 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-default .badge {
     color: white;
-    background-color: #222222;
+    background-color: #eb3812;
 }
 .btn-primary {
     color: white;
-    background-color: #F05F40;
-    border-color: #F05F40;
+    background-color: #eb3812;
+    border-color: #eb3812;
     -webkit-transition: all 0.35s;
     -moz-transition: all 0.35s;
     transition: all 0.35s;
