--- a/Project/PhotographyWebSite/css/full.css
+++ b/Project/PhotographyWebSite/css/full.css
@@ -240,7 +240,7 @@ header .header-content .header-content-inner p {
         margin-right: auto;
     }
 }
-.container-kiko{
+.container-footer{
     background-color: #222222;
 }
 .section-heading {
