--- a/Project/PhotographyWebSite/css/full.css
+++ b/Project/PhotographyWebSite/css/full.css
@@ -95,7 +95,6 @@ aside {
     color: #F05F40;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
     font-weight: 700;
-    text-transform: uppercase;
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
@@ -239,6 +238,9 @@ header .header-content .header-content-inner p {
         margin-left: auto;
         margin-right: auto;
     }
+}
+#footer{
+    background-color:#222222;
 }
 
 .section-heading {
