--- a/Project/PhotographyWebSite/css/cssAbout.css
+++ b/Project/PhotographyWebSite/css/cssAbout.css
@@ -20,4 +20,20 @@
 .text-center{
     color: white;
 }
+#qkTekst{
+    font-family:'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+#predstavqne2{
+    background: #222222;
+}
+#tesktMarto{
+    font-family:'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+#testAndrey{
+    font-family:'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+#predstavqne4{
+    background: #222222;
+}
+
 
